syntax = "proto3";
package pb;

service AppRuntimeSync {
  rpc GetAppStatus (ServicesRequest) returns (StatusMessage) {}
  rpc GetAppDisk (ServicesRequest) returns (DiskMessage) {}
  rpc GetAppPods (ServiceRequest) returns (ServiceAppPodList) {}
  rpc GetDeployInfo (ServiceRequest) returns (DeployInfo) {}
}

message ServiceRequest { 
  string service_id = 1;
}
message ServicesRequest {
  string service_ids = 1;
}

message StatusMessage {
  map<string, string> status = 1;
}

message DiskMessage {
  map<string, double> disks = 1;
}

message ServiceAppPodList {
  repeated ServiceAppPod pods = 1;
}
message ServiceAppPod {
  string service_id = 1;
  string deploy_id = 2;
  string deploy_type = 3;
  string pod_name = 4;
  string pod_ip = 5;
  string pod_status = 6;
  map<string, Container> containers = 7;
}

message Container {
  string container_name = 1;
  int32 memory_limit = 2;
}

message DeployInfo {
  string namespace = 1;
  string statefuleset = 2;
  string deployment = 3;
  map<string, string> pods = 4;
  map<string, string> services = 5;
  map<string, string> secrets = 6;
  map<string, string> ingresses = 7;
  map<string, string> replicatset = 8;
  string status = 9;
}